added the info page and linked it

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="hero">
         <div class="banner">
             <h1 class="banner-title">Buy gold, silver and platinum bullion online at the lowest possible price</h1>
-            <buttton class="banner-btn">buy now</buttton>
+            <a href="info.html"><buttton class="banner-btn" >buy now</buttton></a>
         </div>
     </header>
     <!-- end of hero -->
