--- a/info.html
+++ b/info.html
@@ -292,7 +292,7 @@
             <input type="tel" name="Telephone Number" class="inp" placeholder="Phone number">
             <div class="foot">
                 <a href="./index.html">RETURN</a>
-                <div><button type="submit">Continue To Shipping</button></div> 
+                <a href="shipping.html"><div><button type="submit">Continue To Shipping</button></div></a> 
            </div>
         </form>
 
@@ -311,10 +311,10 @@
                 <div>Shipping <span id="flat-rate">100.00</span></div>
                 <hr>
 
-                <div id="sum-total">TOTAL</div>
+                <div id="items-total">TOTAL</div>
             </div>
         </section>
     </main>
-    <script src="information.js"></script>
+    <script src="info.js"></script>
 </body>
 </html>
