info page responsiveness

--- a/info.html
+++ b/info.html
@@ -11,9 +11,7 @@
     <header>
         
         <nav>
-            <p>INFORMATION > </p>
-            <p>SHIPPING > </p>
-            <p>PAYMENT</p>
+            <p>INFORMATION</p>
         </nav>
     </header>
     <main>
