added total cart to info page

--- a/info.html
+++ b/info.html
@@ -306,13 +306,14 @@
                 <hr>
 
                 <div>Subtotal: </div> <span id="subtotal"></span>
-                <div>Shipping <span id="flat-rate">100.00</span></div>
+                <div>Shipping <span id="flat-rate" >100.00</span></div>
                 <hr>
-
-                <div id="items-total">TOTAL</div>
+                <div>
+                    <div> TOTAL</div><div id="items-total" class="cart-total"> </div>
+                </div>
             </div>
         </section>
     </main>
-    <script src="info.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
