added a buy now button

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <div class="cart-footer">
                     <h3>your total : $ <span class="cart-total">0</span></h3>
                     <button class="clear-cart banner-btn">clear cart</button>
+                    <a href="info.html"><button class="banner-btn button-margin">Buy Now</button></a>
                 </div>
             </div>
         </div>
