--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         </div>
     </header>
     <!-- end of hero -->
-
+    <div class="categories">
+        <a href="./gold.html"><h5>Gold</h5></a>
+        <a href="./silver.html"><h5>Silver</h5></a>
+    </div>
     <section class="products">
         <div class="section-title">
             <h2>Our Products</h2>
