added an authentication code

--- a/info.html
+++ b/info.html
@@ -302,7 +302,7 @@
             </div>
             <div>
                 <hr>
-                <p>Have a coupon?</p>
+                <a href="authentication.html"><p>Have a coupon?</p></a>
                 <hr>
 
                 <div>Subtotal: </div> <span id="subtotal"></span>
