styled and worked on coupon

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <header class="hero">
         <div class="banner">
             <h1 class="banner-title">Buy gold, silver and platinum bullion online at the lowest possible price</h1>
-            <a href="info.html"><buttton class="banner-btn" >buy now</buttton></a>
+            <a href="#products-me"><buttton class="banner-btn" >buy now</buttton></a>
         </div>
     </header>
     <!-- end of hero -->
@@ -37,7 +37,7 @@
         <a href="./silver.html"><h5>Silver</h5></a>
     </div>
     <section class="products">
-        <div class="section-title">
+        <div class="section-title" id="products-me">
             <h2>Our Products</h2>
         </div>
         <div class="products-center">
@@ -193,7 +193,7 @@
     <div class="end">
         <div class="end_left">
             <p>
-                Bullionbuff © 2022 – All Right reserved!
+                Bullionbuff © 2023 – All Right reserved!
             </p>
         </div>
         <div class="end_right">
