--- a/info.html
+++ b/info.html
@@ -290,7 +290,7 @@
             <input type="tel" name="Telephone Number" class="inp" placeholder="Phone number">
             <div class="foot">
                 <a href="./index.html">RETURN</a>
-                <a href="shipping.html"><div><button type="submit">Continue To Shipping</button></div></a> 
+                <a href="shipping.html"><div><button type="submit" id="continue-btn">Continue To Shipping</button></div></a> 
            </div>
         </form>
 
@@ -307,7 +307,7 @@
                     <p id="parentElement">Have a coupon?</p>
                     <div id="myInput">
                         <form class="auth-form">
-                            <input type="text" placeholder="Enter your unique code to proceed:" maxlength="8" class="auth-input">
+                            <input type="text" placeholder="Enter your unique code" maxlength="8" class="auth-input">
                             <button type="submit" class="auth-submit">Apply</button>
                         </form>
                         <p class="auth-error"></p>
